--- a/HubAPI/pom.xml
+++ b/HubAPI/pom.xml
@@ -19,11 +19,20 @@
             <artifactId>lombok</artifactId>
             <version>1.12.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>2.12.2</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
             <id>bukkit-repo</id>
             <url>http://repo.bukkit.org/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>mongo-java-driver</id>
+            <url>http://mvnrepository.com/artifact/org.mongodb/mongo-java-driver</url>
         </repository>
     </repositories>
 
