--- a/HubAPI/pom.xml
+++ b/HubAPI/pom.xml
@@ -20,6 +20,11 @@
             <version>1.12.2</version>
         </dependency>
         <dependency>
+            <groupId>com.zachsthings</groupId>
+            <artifactId>netevents</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
             <version>2.12.2</version>
@@ -33,6 +38,10 @@
         <repository>
             <id>mongo-java-driver</id>
             <url>http://mvnrepository.com/artifact/org.mongodb/mongo-java-driver</url>
+        </repository>
+        <repository>
+            <id>network-repo</id>
+            <url>http://pex-repo.zachsthings.com</url>
         </repository>
     </repositories>
 
