--- a/HubAPI/pom.xml
+++ b/HubAPI/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>mongo-java-driver</artifactId>
             <version>2.12.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.zachsthings</groupId>
+            <artifactId>netevents</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
