--- a/HubAPI/pom.xml
+++ b/HubAPI/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>mongo-java-driver</artifactId>
             <version>2.12.2</version>
         </dependency>
+        <dependency>
+            <groupId>lilypad.client.connect</groupId>
+            <artifactId>api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
@@ -42,6 +47,10 @@
         <repository>
             <id>network-repo</id>
             <url>http://pex-repo.zachsthings.com</url>
+        </repository>
+        <repository>
+            <id>lilypad</id>
+            <url>http://ci.lilypadmc.org/plugin/repository/everything</url>
         </repository>
     </repositories>
 
