News stuff added

--- a/Hub/src/main/resources/config.yml
+++ b/Hub/src/main/resources/config.yml
@@ -15,3 +15,4 @@ Messager:
 TimeLock:
   enabled: true
   lockedtime: 550
+News: ["test", "test", "test", "test", "test", "test", "test", "test", "test", "test"]
