Added authors and register listeners for News

--- a/Hub/src/main/resources/plugin.yml
+++ b/Hub/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
 name: Hub
 version: 0.1
 main: mineplicity.hub.main.Main
+authors: Ali, Emery, Torn, Erez
 commands:
  weatherlock:
   permission: Hub.weatherlock
