Um... Redoing everything.

--- a/HubAPI/src/main/resources/plugin.yml
+++ b/HubAPI/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: Hub
 version: 0.1
-main: minplicity.hub.Main
+main: minplicity.hub.minepow.hubapi.Main
 commands:
  party:
   description: The party command!
