More work on Cleaning up code in HUB

--- a/Hub/pom.xml
+++ b/Hub/pom.xml
@@ -20,11 +20,20 @@
             <artifactId>lombok</artifactId>
             <version>1.12.2</version>
         </dependency>
+        <dependency>
+            <groupId>me.confuser</groupId>
+            <artifactId>BarAPI</artifactId>
+            <version>3.0</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
             <id>bukkit-repo</id>
             <url>http://repo.bukkit.org/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>confuser-repo</id>
+            <url>http://ci.frostcast.net/plugin/repository/everything</url>
         </repository>
     </repositories>
 
