--- a/HubAPI/src/main/resources/plugin.yml
+++ b/HubAPI/src/main/resources/plugin.yml
@@ -1,11 +1,9 @@
-name: Hub
-version: 0.1
-<<<<<<< HEAD
-main: minplicity.hub.Main
-authors: Adam
-=======
-main: minplicity.hub.minepow.hubapi.Main
->>>>>>> 88fc7fb5e84bc93f67b38e461ac34c4c4891bbd6
+name: HubAPI
+version: 1.0
+author: BinaryConcepts
+main: minepow.hubapi.Main
 commands:
  party:
-  description: The party command!
+  description: Party Commands
+ money:
+  description: Economy Commands
