--- a/Minigame_Instance/pom.xml
+++ b/Minigame_Instance/pom.xml
@@ -7,6 +7,15 @@
     <groupId>Minigame_Instance</groupId>
     <artifactId>Minigame_Instance</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+    <dependency>
 
+    <groupId>org.bukkit</groupId>
+
+    <artifactId>bukkit</artifactId>
+    <version>1.7.2-R0.1-SNAPSHOT</version>
+    </dependency>
+
+    </dependencies>
     
 </project>
